--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -2,15 +2,14 @@
 @use "sass/mixin";
 @use "sass/size";
 
-.near-ft-transfer-task,
 .near-storage-withdraw-task,
 .near-storage-deposit-task,
 .near-storage-unregister-task,
+.near-ft-transfer-task,
 .near-ft-transfer-call-task,
 .near-nft-transfer-task,
 .near-nft-transfer-call-task,
-.near-mft-transfer-task,
-.near-mft-transfer-call-task,
+.near-nft-approve-task,
 .near-deposit-and-stake-task,
 .near-unstake-task,
 .near-withdraw-task {
