added 'powered by mintbase' and updated assets according to press kit

--- a/src/families/base.scss
+++ b/src/families/base.scss
@@ -173,8 +173,12 @@ form.edit {
         color: rgba(color.$light-text, 0.5) !important;
         font-size: size.$small-text;
         cursor: pointer;
-        .icon {
+        .logo {
             font-size: size.$large-text;
+            height: size.$large-text;
+        }
+        span {
+            white-space: nowrap;
         }
         &:hover {
             text-decoration: underline;
