--- a/src/families/mintbase/mintbase.scss
+++ b/src/families/mintbase/mintbase.scss
@@ -1,11 +1,13 @@
-@use "sass/color";
+$mintbase-blue: #070c2b;
+$mintbase-red: #ff2424;
 
 .mintbase-create-store-task,
 .mintbase-transfer-store-ownership-task,
 .mintbase-add-minter-task,
 .mintbase-remove-minter-task {
-    background-image: url("../../app/static/mintbase.png");
-    background-position-x: 60rem;
-    background-position-y: 60rem;
-    background-size: 80rem;
+    background-color: $mintbase-blue;
+    background-image: url("../../app/static/mintbase/Mintbase_symbol.svg");
+    background-position-x: 42rem;
+    background-position-y: 239rem;
+    background-size: 77rem;
 }
