added image preview

--- a/src/shared/ui/form-fields/file-field/file-field.scss
+++ b/src/shared/ui/form-fields/file-field/file-field.scss
@@ -34,6 +34,7 @@
                     font-family: font.$code;
                     font-size: size.$small-text;
                     line-height: size.$text;
+                    cursor: pointer;
                 }
                 .MuiSelect-select {
                     height: size.$small-text;
