--- a/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
+++ b/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
@@ -9,7 +9,7 @@
 
     grid-template-areas:
         "admins tokensWhitelist"
-        "jobsSettings MCCEProposalSummary";
+        "jobsSettings MCCEChangesProposal";
 
     &-admins {
         grid-area: admins;
