--- a/src/shared/ui/components/table/table.scss
+++ b/src/shared/ui/components/table/table.scss
@@ -39,4 +39,8 @@
         flex-flow: column nowrap;
         gap: size.$gap * 0.6;
     }
+
+    &--dense {
+        gap: size.$gap * 0.4;
+    }
 }
