--- a/src/families/multicall/multicall.scss
+++ b/src/families/multicall/multicall.scss
@@ -1,5 +1,10 @@
 @use "sass/color";
+@use "../base";
 
 .multicall-transfer-task {
     background: color.$darkest;
+    @include base.task-theme(color.$light-text);
+    // .data-container {
+    //     background-color: transparent;
+    // }
 }
