--- a/src/families/base.scss
+++ b/src/families/base.scss
@@ -183,10 +183,6 @@
     }
 }
 
-.task-container {
-    @include task-theme(color.$text);
-}
-
 form.edit {
     @include mixin.full;
     @include mixin.center-items(flex-start);
@@ -210,8 +206,12 @@ form.edit {
         color: rgba(color.$light-text, 0.5) !important;
         font-size: size.$small-text;
         cursor: pointer;
-        .icon {
+        .logo {
             font-size: size.$large-text;
+            height: size.$large-text;
+        }
+        span {
+            white-space: nowrap;
         }
         &:hover {
             text-decoration: underline;
