--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -2,6 +2,7 @@
 @use "sass/mixin";
 @use "sass/size";
 @use "sass/font";
+@use "../base";
 
 .near-storage-withdraw-task,
 .near-storage-deposit-task,
@@ -18,15 +19,7 @@
 .near-unstake-task,
 .near-withdraw-task {
     background: color.$lightest;
-    .name {
-        color: color.$text !important;
-        h3 {
-            color: color.$text;
-        }
-        .icon {
-            fill: color.$text;
-        }
-    }
+    @include base.task-theme(color.$text);
     * > a {
         color: darken(color.$blue, 20%) !important;
     }
