--- a/src/families/base.scss
+++ b/src/families/base.scss
@@ -26,23 +26,7 @@
     transform-origin: center center; /* Standard Property */
 }
 
-.base-task {
-    background: color.$lightest;
-    .name {
-        color: color.$text !important;
-        h3 {
-            color: color.$text;
-        }
-        .icon {
-            fill: color.$text !important;
-        }
-    }
-    * > a {
-        color: darken(color.$blue, 20%) !important;
-    }
-}
-
-.task-container {
+@mixin task-theme($contrast) {
     position: relative;
     display: flex;
     flex-flow: column nowrap;
@@ -51,7 +35,7 @@
     border-radius: size.$task-radius;
     overflow: hidden;
     * {
-        color: color.$text;
+        color: $contrast;
     }
     .name {
         @include mixin.center-items;
@@ -59,11 +43,11 @@
         padding-top: 0.25 * size.$gap;
         padding-bottom: 0.25 * size.$gap;
         * {
-            color: color.$light-text;
+            color: $contrast;
         }
         .icon {
             @include mixin.icon;
-            fill: color.$light-text;
+            fill: $contrast;
             cursor: pointer;
             opacity: 0;
             transition: opacity 100ms ease;
@@ -119,22 +103,12 @@
         max-height: 100%;
         overflow-y: scroll;
         padding: 0.5 * size.$gap;
-        padding-bottom: size.$gap;
-        background-color: rgba(color.$light, 0.5);
+        background-color: rgba(color.$light, 0.25);
         z-index: 1;
-        pre.code {
-            @include mixin.no-scrollbar;
-            padding: 0.5rem;
-            margin: 0.5rem;
-            background-color: rgba(color.$lightest, 1);
-            border-radius: 0.5 * size.$task-radius;
-            font-family: font.$code;
-            font-size: size.$smaller-text;
-            overflow-x: scroll;
-        }
-        p {
+        .addr {
             display: flex;
-            width: 100%;
+            width: calc(100% - size.$gap);
+            padding: 0 0.5 * size.$gap;
             flex-flow: row nowrap;
             justify-content: space-between;
             margin-bottom: -0.3rem;
@@ -149,8 +123,51 @@
                 font-family: font.$code;
                 font-size: size.$smaller-text;
             }
-            &.expandable {
-                flex-wrap: wrap;
+        }
+        .action-data-container {
+            margin-top: 0.5 * size.$gap;
+            padding: 0.5 * size.$gap;
+            border: 1px solid rgba($contrast, 0.2);
+            border-radius: 0.25 * size.$task-radius;
+            pre.code {
+                @include mixin.no-scrollbar;
+                padding: 0.5rem;
+                margin: 0.5rem 0;
+                background-color: rgba(color.$lightest, 1);
+                border-radius: 0.25 * size.$task-radius;
+                font-family: font.$code;
+                font-size: size.$smaller-text;
+                overflow-x: scroll;
+                color: color.$text;
+            }
+            p {
+                display: flex;
+                width: 100%;
+                flex-flow: row nowrap;
+                justify-content: space-between;
+                margin-bottom: -0.3rem;
+                font-size: size.$small-text;
+                span {
+                    white-space: nowrap;
+                }
+                .code {
+                    @include mixin.no-wrap;
+                    padding-left: 1.5rem;
+                    line-height: 1.85rem;
+                    font-family: font.$code;
+                    font-size: size.$smaller-text;
+                }
+                &.expandable {
+                    flex-wrap: wrap;
+                }
+            }
+            &:first-of-type {
+                border-top-left-radius: 0.75 * size.$task-radius !important;
+                border-top-right-radius: 0.75 * size.$task-radius !important;
+            }
+            &:last-of-type {
+                border-bottom-left-radius: 0.75 * size.$task-radius !important;
+                border-bottom-right-radius: 0.75 * size.$task-radius !important;
             }
         }
     }
@@ -166,140 +183,39 @@
     }
 }
 
-.edit {
+.task-container {
+    @include task-theme(color.$text);
+}
+
+form.edit {
     @include mixin.full;
+    @include mixin.center-items(flex-start);
     @include mixin.no-scrollbar;
+    flex-flow: column nowrap;
+    padding: 0 size.$gap;
+    width: calc(100% - 2 * size.$gap);
     overflow-y: scroll;
-    .unitInput {
-        @include mixin.center-items(center, flex-start);
-        flex-flow: row nowrap;
-        .MuiTextField-root {
-            &:first-of-type {
-                flex: 2 1 auto;
-            }
-            &:last-of-type {
-                flex: 1 0 max-content;
-                margin-left: 0.25 * size.$gap;
-                .MuiInputBase-root {
-                    width: 100% !important;
-                    font-size: size.$small-text;
-                }
-            }
-        }
-        &:last-of-type .MuiTextField-root {
-            &:first-of-type fieldset {
-                border-radius: 0 0 0 size.$task-radius;
-            }
-            &:last-of-type fieldset {
-                border-radius: 0 0 size.$task-radius 0;
-            }
-        }
-    }
-    .checkbox {
-        @include mixin.center-items(flex-start, center);
-        flex-flow: row nowrap;
+
+    .empty-line {
         width: 100%;
-        p {
-            color: color.$light-text;
-            font-size: size.$small-text;
-        }
-        .MuiCheckbox-root {
-            color: color.$light;
-            &.Mui-checked {
-                color: color.$green;
-            }
-            .MuiSvgIcon-root {
-                font-size: size.$text;
-            }
-        }
+        height: 1em;
     }
-    .MuiTextField-root {
-        p.Mui-error {
-            color: color.$red;
-            font-weight: 800;
-            font-family: font.$text;
-            font-size: size.$small-text;
-            &::before {
-                content: "Error: ";
-            }
+
+    .protocol {
+        justify-self: flex-end;
+        @include mixin.center-items;
+        padding: size.$gap;
+        margin-top: auto;
+        gap: 1ch;
+        color: rgba(color.$light-text, 0.5) !important;
+        font-size: size.$small-text;
+        cursor: pointer;
+        .icon {
+            font-size: size.$large-text;
         }
-        label {
-            font-family: font.$text;
-            font-weight: 800;
-            &.Mui-focused {
-                color: color.$light-text;
-            }
-            &.Mui-error {
-                color: color.$red;
-            }
-        }
-        .MuiOutlinedInput-root {
-            input,
-            textarea {
-                color: color.$white;
-                font-family: font.$code;
-                font-size: size.$small-text;
-            }
-            textarea {
-                @include mixin.no-scrollbar;
-                white-space: pre;
-                overflow-x: scroll !important;
-            }
-            fieldset {
-                border-color: color.$lightish;
-                border-width: 1px;
-                box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
-                border-radius: 0;
-                legend {
-                    background-color: color.$black;
-                    margin-left: -2px;
-                    padding: 2px;
-                    border-radius: 20px;
-                    visibility: visible;
-                }
-                legend > span {
-                    font-size: 0.75em;
-                    visibility: hidden;
-                }
-            }
-            &:hover fieldset {
-                border-color: color.$white;
-            }
-            &.Mui-focused fieldset {
-                border-color: color.$white;
-            }
-            &.Mui-error fieldset {
-                border-color: color.$red !important;
-            }
-        }
-        .MuiInput-underline {
-            &:hover::before,
-            &::before {
-                border-bottom-color: color.$lightish;
-            }
-            &:hover::after,
-            &::after {
-                border-bottom-color: color.$white;
-            }
-            input {
-                font-weight: 500;
-            }
-        }
-        *:not(input) {
-            color: color.$light-text;
-            font-size: 1em;
-        }
-        font-size: size.$text;
-    }
-    & > .MuiTextField-root {
-        &:first-of-type {
-            margin-top: 0;
-        }
-        &:nth-of-type(2) > .MuiOutlinedInput-root > fieldset {
-            border-radius: size.$task-radius size.$task-radius 0 0;
-        }
-        &:last-of-type > .MuiOutlinedInput-root > fieldset {
-            border-radius: 0 0 size.$task-radius size.$task-radius;
+        &:hover {
+            text-decoration: underline;
+            color: color.$light-text !important;
         }
     }
 }
