--- a/src/families/meta-pool/meta-pool.scss
+++ b/src/families/meta-pool/meta-pool.scss
@@ -1,4 +1,6 @@
 @use "sass/color";
+@use "sass/mixin";
+@use "sass/font";
 @use "../base";
 
 $meta-pool-purple: #735de9;
@@ -11,4 +13,28 @@ $meta-pool-purple: #735de9;
     background-repeat: no-repeat;
     background-size: 12rem;
     @include base.task-theme(color.$light-text);
+}
+
+.meta-pool-nslp-add-liquidity-task-edit {
+    .InfoField-content {
+        display: flex;
+        flex-flow: column nowrap;
+        .entry {
+            @include mixin.center-items(space-between, center);
+            height: 2em;
+            flex-flow: row nowrap;
+            max-width: 100%;
+        }
+        .key {
+            font-weight: 800;
+            white-space: nowrap;
+        }
+        .value {
+            font-family: font.$code;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-left: 2em;
+        }
+    }
 }
