--- a/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
+++ b/src/widgets/multicall-config-editor/ui/multicall-config-editor.scss
@@ -4,15 +4,16 @@
     grid-area: MulticallConfigEditor;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 6fr 4fr;
+    grid-template-rows: 0fr 1fr;
     gap: size.$gap;
 
     grid-template-areas:
-        "admins tokensWhitelist"
-        "jobsSettings MCCEChangesProposal";
+        "tokensWhitelist jobsSettings"
+        "tokensWhitelist MCEChangesProposal";
 
     &-admins {
         grid-area: admins;
+        display: none;
     }
 
     &-jobsSettings {
