--- a/src/families/mintbase/mintbase.scss
+++ b/src/families/mintbase/mintbase.scss
@@ -7,7 +7,8 @@ $mintbase-red: #ff2424;
 .mintbase-create-store-task,
 .mintbase-transfer-store-ownership-task,
 .mintbase-add-minter-task,
-.mintbase-remove-minter-task {
+.mintbase-remove-minter-task,
+.mintbase-buy-nft-task {
     background-color: $mintbase-blue;
     background-image: url("../../app/static/mintbase/Mintbase_symbol.svg");
     background-position-x: 42rem;
