--- a/src/shared/ui/design/link/link.scss
+++ b/src/shared/ui/design/link/link.scss
@@ -2,6 +2,7 @@
 @use "sass/size";
 
 .Link {
+    line-height: 1;
     color: darken(color.$blue, 30%);
     text-decoration: none;
     cursor: pointer;
@@ -10,6 +11,7 @@
         background-color: color.$darkest;
 
         &.MuiTooltip-tooltip {
+            margin-left: size.$text !important;
             background-color: color.$darkest;
         }
 
