wip: Update compact dense table row styles

--- a/src/shared/ui/design/table/row.scss
+++ b/src/shared/ui/design/table/row.scss
@@ -171,7 +171,7 @@
                     padding: 0;
 
                     & > span {
-                        padding: size.$gap * 0.4 size.$gap * 0.6;
+                        padding: size.$gap * 0.4;
                     }
                 }
             }
