add mft_register card

--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -17,7 +17,8 @@
 .near-mft-transfer-call-task,
 .near-deposit-and-stake-task,
 .near-unstake-task,
-.near-withdraw-task {
+.near-withdraw-task,
+.near-mft-register-task {
     background: color.$lightest;
     @include base.task-theme(color.$text);
     * > a {
