apply styling to buy card

--- a/src/families/mintbase/mintbase.scss
+++ b/src/families/mintbase/mintbase.scss
@@ -1,4 +1,6 @@
 @use "sass/color";
+@use "sass/mixin";
+@use "sass/font";
 @use "../base";
 
 $mintbase-blue: #070c2b;
@@ -24,6 +26,30 @@ $mintbase-red: #ff2424;
         flex-flow: column nowrap;
         .minter-account-id {
             align-self: flex-end;
+        }
+    }
+}
+
+.mintbase-buy-nft-task-edit {
+    .InfoField-content {
+        display: flex;
+        flex-flow: column nowrap;
+        .entry {
+            @include mixin.center-items(space-between, center);
+            height: 2em;
+            flex-flow: row nowrap;
+            max-width: 100%;
+        }
+        .key {
+            font-weight: 800;
+            white-space: nowrap;
+        }
+        .value {
+            font-family: font.$code;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-left: 2em;
         }
     }
 }
