--- a/src/shared/ui/design/table/row.scss
+++ b/src/shared/ui/design/table/row.scss
@@ -75,7 +75,7 @@
                 }
             }
 
-            &:not(&--entitled) {
+            &:not(&--withTitile) {
                 padding: 0.5 * size.$gap size.$gap;
                 background-color: rgba(color.$lightest, 0.7);
 
@@ -120,7 +120,7 @@
                 }
             }
 
-            &--entitled {
+            &--withTitile {
                 &:first-of-type {
                     & > span {
                         &:first-of-type {
@@ -166,7 +166,7 @@
                 }
             }
 
-            &--dense.TableRow-content--compact--entitled {
+            &--dense.TableRow-content--compact--withTitile {
                 &:not(:first-of-type) {
                     padding: 0;
 
