--- a/src/widgets/tokens-balances/ui/tokens-balances.scss
+++ b/src/widgets/tokens-balances/ui/tokens-balances.scss
@@ -1,7 +1,7 @@
 @use "sass/font";
 
-.TokensBalances {
-    grid-area: TokensBalances;
+.TokenBalances {
+    grid-area: TokenBalances;
 
     .TableRow-content--compact {
         &:not(&:first-of-type) {
