--- a/src/features/external-login/ui/el-dialog.scss
+++ b/src/features/external-login/ui/el-dialog.scss
@@ -1,7 +1,7 @@
 @use "sass/size";
 @use "sass/mixin";
 
-.DappLoginDialog {
+.ExternalLoginDialog {
     &-stepByStepGuide {
         padding: 0 size.$gap;
         list-style-type: decimal;
