fix: size of dao page

--- a/src/widgets/settings-editor/ui/settings-editor.scss
+++ b/src/widgets/settings-editor/ui/settings-editor.scss
@@ -4,8 +4,9 @@
     grid-area: SettingsEditor;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: size.$gap;
+    height: 100%;
 
     grid-template-areas:
         "tokenWhitelist jobsSettings"
