fix: propose button shouldnt be active when not instance is present

--- a/src/widgets/export/export.scss
+++ b/src/widgets/export/export.scss
@@ -26,6 +26,10 @@
         border-radius: size.$task-radius;
         z-index: 1;
 
+        a {
+            color: color.$blue;
+        }
+
         &--propose {
             background-color: color.$green;
 
