fix: tabs layout height

--- a/src/pages/dao/dao.scss
+++ b/src/pages/dao/dao.scss
@@ -133,15 +133,18 @@
             }
         }
     }
-}
+    &-tabs {
+        height: calc(100% - (2 * size.$gap + 0.5 * size.$large-text));
 
-.DaoPage-tabs-buttonsPanel {
-    justify-content: flex-start;
-    max-width: 120rem;
-    margin: size.$gap auto 0 auto;
-    padding: 0 size.$gap;
-}
+        &-buttonsPanel {
+            justify-content: flex-start;
+            max-width: 120rem;
+            margin: size.$gap auto 0 auto;
+            padding: 0 size.$gap;
+        }
 
-.DaoPage-tabs-contentSpace {
-    height: calc(100% - size.$gap - size.$Tabs-layout-buttonsPanel-height);
+        &-contentSpace {
+            height: calc(100% - size.$gap - size.$Tabs-layout-buttonsPanel-height);
+        }
+    }
 }
