--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -27,6 +27,31 @@
     }
 }
 
+.near-wrap-task-edit,
+.near-unwrap-task-edit {
+    .InfoField-content {
+        display: flex;
+        flex-flow: column nowrap;
+        .entry {
+            @include mixin.center-items(space-between, center);
+            height: 2em;
+            flex-flow: row nowrap;
+            max-width: 100%;
+        }
+        .key {
+            font-weight: 800;
+            white-space: nowrap;
+        }
+        .value {
+            font-family: font.$code;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-left: 2em;
+        }
+    }
+}
+
 .near-nft-approve-task-edit,
 .near-nft-revoke-task-edit {
     .InfoField-content {
