--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -17,11 +17,38 @@
 .near-mft-transfer-call-task,
 .near-deposit-and-stake-task,
 .near-unstake-task,
-.near-withdraw-task {
+.near-withdraw-task,
+.near-wrap-task,
+.near-unwrap-task {
     background: color.$lightest;
     @include base.task-theme(color.$text);
     * > a {
         color: darken(color.$blue, 20%) !important;
+    }
+}
+
+.near-wrap-task-edit,
+.near-unwrap-task-edit {
+    .InfoField-content {
+        display: flex;
+        flex-flow: column nowrap;
+        .entry {
+            @include mixin.center-items(space-between, center);
+            height: 2em;
+            flex-flow: row nowrap;
+            max-width: 100%;
+        }
+        .key {
+            font-weight: 800;
+            white-space: nowrap;
+        }
+        .value {
+            font-family: font.$code;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-left: 2em;
+        }
     }
 }
 
