--- a/src/pages/dao/funds/funds.scss
+++ b/src/pages/dao/funds/funds.scss
@@ -4,6 +4,6 @@
     grid-template-rows: 1fr 1fr;
 
     grid-template-areas:
-        "TokenBalances TokenBalances"
-        "TokenBalances TokenBalances";
+        "Balances Balances"
+        "Balances Balances";
 }
