--- a/src/widgets/settings-editor/ui.scss
+++ b/src/widgets/settings-editor/ui.scss
@@ -9,8 +9,8 @@
     height: 100%;
 
     grid-template-areas:
-        "TokenWhitelistChange SchedulingSettingsChange"
-        "TokenWhitelistChange SettingsProposalCreate";
+        "ManageTokenWhitelist ManageScheduleSettings"
+        "ManageTokenWhitelist ProposeSettings";
 
     &-error {
         grid-area: SettingsEditorError;
