wip: Apply code review and naming remarks

--- a/src/entities/job/ui/job.entries.scss
+++ b/src/entities/job/ui/job.entries.scss
@@ -2,8 +2,8 @@
 @use "sass/font";
 @use "sass/size";
 
-.JobsTable {
-    grid-area: JobsTable;
+.JobEntriesTable {
+    grid-area: JobEntriesTable;
 
     &-body {
         .TableRow-content--compact {
