--- a/src/pages/dao/jobs/jobs.scss
+++ b/src/pages/dao/jobs/jobs.scss
@@ -4,6 +4,6 @@
     grid-template-rows: 1fr 1fr;
 
     grid-template-areas:
-        "JobsTable JobsTable"
-        "JobsTable JobsTable";
+        "JobEntriesTable JobEntriesTable"
+        "JobEntriesTable JobEntriesTable";
 }
