chore: Use more consistent naming

--- a/src/pages/dao/settings/settings.scss
+++ b/src/pages/dao/settings/settings.scss
@@ -1,7 +1,7 @@
 @use "sass/mixin";
 @use "sass/size";
 
-.DaoSettingsTab {
+.DAOSettingsTab {
     margin: size.$gap !important;
     padding: 0 !important;
     overflow-y: scroll;
