--- a/src/pages/dao/dao.scss
+++ b/src/pages/dao/dao.scss
@@ -4,7 +4,7 @@
 @use "sass/font";
 @use "sass/animation";
 
-.DaoPage {
+.DAOPage {
     @include mixin.page-wrapper;
     display: flex;
     flex-flow: column nowrap;
