fix: Apply code review and naming remarks & Remove redundant code

--- a/src/widgets/multicall-settings-manager/ui/multicall-settings-manager.ui.scss
+++ b/src/widgets/multicall-settings-manager/ui/multicall-settings-manager.ui.scss
@@ -1,25 +1,31 @@
+@use "sass/mixin";
 @use "sass/size";
 
-.SettingsEditor {
-    grid-area: SettingsEditor;
+.MulticallSettingsManager {
+    grid-area: MulticallSettingsManager;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: size.$gap;
+    margin: size.$gap !important;
+    border-radius: size.$task-radius;
+    padding: 0 !important;
+    overflow-y: scroll;
     height: 100%;
+    @include mixin.no-scrollbar;
 
     grid-template-areas:
         "ManageTokenWhitelist ManageScheduleSettings"
         "ManageTokenWhitelist ProposeSettings";
 
     &-error {
-        grid-area: SettingsEditorError;
+        grid-area: MulticallSettingsError;
     }
 
     &.is-displayingError {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
-        grid-template-areas: "SettingsEditorError";
+        grid-template-areas: "MulticallSettingsError";
     }
 
     &.is-displayingError > *:not(&-error) {
