--- a/src/shared/ui/form/fields/text-field.scss
+++ b/src/shared/ui/form/fields/text-field.scss
@@ -7,6 +7,7 @@
     @include mixin.center-items(flex-start);
     flex-flow: row wrap;
     width: 100%;
+
     &-input {
         &.MuiTextField-root {
             p.Mui-error {
@@ -14,20 +15,25 @@
                 font-weight: 800;
                 font-family: font.$text;
                 font-size: size.$small-text;
+
                 &::before {
                     content: "Error: ";
                 }
             }
+
             label {
                 font-family: font.$text;
                 font-weight: 800;
+
                 &.Mui-focused {
                     color: color.$light-text;
                 }
+
                 &.Mui-error {
                     color: color.$red;
                 }
             }
+
             .MuiOutlinedInput-root {
                 .MuiOutlinedInput-input {
                     color: color.$white;
@@ -35,19 +41,23 @@
                     font-size: size.$small-text;
                     line-height: size.$text;
                 }
+
                 .MuiSelect-select {
                     height: size.$small-text;
                 }
+
                 textarea {
                     @include mixin.no-scrollbar;
                     white-space: pre;
                     overflow-x: scroll !important;
                 }
+
                 fieldset {
                     border-color: color.$lightish;
                     border-width: 1px;
                     box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
                     border-radius: 0.25 * size.$task-radius;
+
                     legend {
                         background-color: color.$black;
                         margin-left: -2px;
@@ -55,55 +65,95 @@
                         border-radius: 20px;
                         visibility: visible;
                     }
+
                     legend > span {
                         font-size: 0.75em;
                         visibility: hidden;
                     }
                 }
+
                 &:hover fieldset {
                     border-color: color.$white;
                 }
+
                 &.Mui-focused fieldset {
                     border-color: color.$white;
                 }
+
                 &.Mui-error fieldset {
                     border-color: color.$red !important;
                 }
+
                 &.MuiOutlinedInput-root.MuiInputBase-hiddenLabel legend {
                     padding: 0;
                     margin-top: 1px;
                 }
             }
+
             .MuiInput-underline {
                 &:hover::before,
                 &::before {
                     border-bottom-color: color.$lightish;
                 }
+
                 &:hover::after,
                 &::after {
                     border-bottom-color: color.$white;
                 }
+
                 input {
                     text-align: center;
                     font-family: font.$text;
                     font-weight: 500;
+
                     &:active,
                     &:focus {
                         text-align: left;
                     }
                 }
             }
+
             *:not(.MuiOutlinedInput-input) {
                 color: color.$light-text;
                 font-size: 1em;
             }
+
             font-size: size.$text;
         }
     }
+
+    &--invertedColors &-input {
+        &.MuiTextField-root {
+            fieldset {
+                border-color: color.$darkish;
+                box-shadow: inset 0px 0px 30px 0px rgba(color.$black, 0.1);
+
+                legend {
+                    background-color: color.$white;
+                }
+            }
+
+            label {
+                color: color.$black;
+
+                .MuiFormLabel-asterisk {
+                    color: color.$black;
+                }
+            }
+
+            .MuiOutlinedInput-root {
+                .MuiOutlinedInput-input {
+                    color: color.$black;
+                }
+            }
+        }
+    }
+
     &.roundtop fieldset {
         border-top-left-radius: 0.75 * size.$task-radius !important;
         border-top-right-radius: 0.75 * size.$task-radius !important;
     }
+
     &.roundbottom fieldset {
         border-bottom-left-radius: 0.75 * size.$task-radius !important;
         border-bottom-right-radius: 0.75 * size.$task-radius !important;
