--- a/src/widgets/schedule-overview/ui/schedule-overview.ui.scss
+++ b/src/widgets/schedule-overview/ui/schedule-overview.ui.scss
@@ -1,4 +1,4 @@
-.MulticallScheduleOverview {
+.ScheduleOverview {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
