fix: add ellipsis on NearLinks

--- a/src/shared/ui/design/link/link.scss
+++ b/src/shared/ui/design/link/link.scss
@@ -2,10 +2,12 @@
 @use "sass/size";
 
 .Link {
-    line-height: 1;
     color: darken(color.$blue, 30%);
     text-decoration: none;
     cursor: pointer;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    display: block;
 
     &-tooltip {
         padding: 0;
