wip: Update styles

--- a/src/features/configure-scheduling/ui/configure-scheduling.ui.scss
+++ b/src/features/configure-scheduling/ui/configure-scheduling.ui.scss
@@ -1,3 +1,9 @@
 .ConfigureScheduling {
     grid-area: ConfigureScheduling;
+    display: flex;
+    flex-flow: column;
+
+    &-controls {
+        flex: auto;
+    }
 }
